--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,12 @@
   background-color: deepskyblue;
 }
 
+#font{
+
+/*font-family: 'Euphoria Script', cursive;*/
+font-family: 'Lora', serif;
+font-size: 16px;
+}
 .center{
   align-content: center;
   align-items: center;
@@ -20,7 +26,7 @@
 }
 
 #emirates{
-  color: brown;
+  color: #aa7243;
   margin-top: 50px;
 }
 .navcon{
@@ -35,6 +41,12 @@
 
 .blue{
   color: deepskyblue;
+}
+
+.emirates-logo{
+  position: relative;
+  margin-top: -10px;
+  left: 1030px;
 }
 
 .logo{
